--- a/Anomaly_Test.ipynb
+++ b/Anomaly_Test.ipynb
@@ -1,1 +1,53 @@
-printf("Test msg")
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "provenance": [],
+      "authorship_tag": "ABX9TyMOxSD7gi2BEYaz5vh7CJbC",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Pinak-Datta/Anomaly-Detection-using-ML/blob/main/Anomaly_Test.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XfZWjwOJbU4H",
+        "outputId": "a55e05b8-1567-4467-8112-cd971e6f8ad3"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test Message\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Test Message\")"
+      ]
+    }
+  ]
+}
